--- a/Css/style.css
+++ b/Css/style.css
@@ -1888,7 +1888,7 @@ footer .footer_inner {
 .footer_main .flour_and_frost h2 {
     color: var(--color_main);
     font-family: var(--heading_font);
-    font-size: 1.8em;
+    font-size: 1.9em;
     padding-top: .1em;
 }
 
@@ -1933,6 +1933,17 @@ footer .footer_inner {
 }
 
 
+.newsletter .checkbox input[type="checkbox"] {
+    /* outline: 1px solid red; */
+    outline: none;
+}
+
+
+.newsletter .checkbox input[type="checkbox"]:focus {
+    outline: 1px solid var(--color_main);
+}
+
+
 
 .newsletter form input[type="text"] {
     border: none;
@@ -1952,6 +1963,7 @@ footer .footer_inner {
     height: 15%;
     outline: none;
     z-index: 10;
+    margin-top: 1em;
 }
 
 
@@ -1980,7 +1992,7 @@ footer .footer_inner {
 .newsletter form input[type="email"]::placeholder {
     color: #a4a4a4;
     font-family: 'Ubuntu';
-    font-size: .9em;
+    font-size: .89em;
     font-weight: 700;
     letter-spacing: .8px;
     word-spacing: 2px;
@@ -1991,7 +2003,7 @@ footer .footer_inner {
 .newsletter form input[type="text"]::placeholder {
     color: #a4a4a4;
     font-family: 'Ubuntu';
-    font-size: .9em;
+    font-size: .89em;
     font-weight: 700;
     letter-spacing: .8px;
     word-spacing: 2px;
@@ -2004,6 +2016,7 @@ footer .footer_inner {
     color: #252525;
     padding-left: 1.5em;
     transition: .2s ease-in;
+    border: 1px solid var(--color_main);
 }
 
 
@@ -2015,8 +2028,8 @@ footer .footer_inner {
 .newsletter button {
     width: 110%;
     height: 20%;
-    background-color: #8e8e8e;
-    border: 1px solid #8e8e8e;
+    background-color: var(--light);
+    border: 1px solid var(--light);
     border-radius: 25px;
     outline: none;
     font-family: 'Roboto';
@@ -2030,7 +2043,7 @@ footer .footer_inner {
     width: 100%;
     height: 100%;
     border-radius: 25px;
-    color: #fff;
+    color: #565656;
     letter-spacing: 1px;
     display: flex;
     justify-content: center;
@@ -2039,8 +2052,8 @@ footer .footer_inner {
 
 
 .newsletter a:hover {
-    background-color: var(--light);
-    border: 1px solid var(--light);
+    background-color: #8e8e8e;
+    border: 1px solid #8e8e8e;
     color: var(--dark);
     outline: none;
     transition: all .2s ease;
@@ -2138,6 +2151,7 @@ footer .footer_inner {
         background-image: linear-gradient(rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.5)), url('../Images/food-7877315(11)-min.jpg');
     }
 
+    
 
     .header_inner .navbar {
         display: flex;
@@ -2162,7 +2176,7 @@ footer .footer_inner {
 
 
     .logo a {
-        font-size: 2.5em;
+        font-size: 2.4em;
     }
 
 
@@ -2252,16 +2266,17 @@ footer .footer_inner {
     .hero_inner .hero_left {
         width: 100%;
         height: 90%;
+        /* border: 2px solid red; */
         /* justify-content: center; */
     }
 
 
     .hero_left .text_and_btn {
-        height: 100%;
+        height: 90%;
         /* border: 2px solid red; */
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
     }
 
@@ -2275,15 +2290,17 @@ footer .footer_inner {
         height: 12%;
         color: #eaeaea;
         font-size: 1.4em;
-        padding-top: 2em;
+        padding-top: 1em;
         letter-spacing: 1px;
     }
     
 
     .text_and_btn h1 {
         height: 60%;
-        font-family: sans-serif;
+        /* font-family: sans-serif; */
+        font-family: 'Ubuntu';
         font-size: 2.2em;
+        font-weight: 900;
         letter-spacing: 3px;
         line-height: 1.6;
         display: flex;
@@ -2297,24 +2314,36 @@ footer .footer_inner {
 
 
     .text_and_btn button {
-        width: 70%;
-        height: 11%;
+        width: 75%;
+        height: 10.5%;
     }
 
 
     .text_and_btn button a {
-        font-size: 1.5em;
+        font-size: 1.3em;
+    }
+
+
+    main .section_inner > h1 {
+        font-size: 1.1em;
+    }
+
+
+    main .section_inner p {
+        font-size: .95em;
     }
 
 
 
     #showcase {
-        min-height: 480vh;
+        min-height: 450vh;
         height: 480vh;
     }
 
 
     #showcase .showcase_inner {
+        /* border: 2px solid cyan; */
+        width: 88%;
         height: 100%;
         justify-content: space-evenly;
     }
@@ -2329,22 +2358,23 @@ footer .footer_inner {
         height: 93%;
         grid-template-columns: 1fr;
         grid-gap: 2em;
-        margin-top: -.7em;
+        margin-top: -.2em;
     }
 
 
     .gallery .card {
-        height: 15%;
+        height: 35%;
+        /* border: 2px solid red; */
     }
 
 
     .gallery .card .image_content {
-        height: 65%;
+        height: 67%;
     }
 
 
     .gallery .card .description {
-        height: 35%;
+        height: 33%;
         justify-content: space-evenly;
     }
 
@@ -2369,7 +2399,7 @@ footer .footer_inner {
     
     
     #about {
-        height: 175vh;
+        height: 130vh;
     }
 
 
@@ -2383,33 +2413,37 @@ footer .footer_inner {
     
     #about .about_inner .grid {
         width: 100%;
-        height: 25%;
+        height: 30%;
     }
 
 
     #about .about_inner .paragraphs {
         width: 100%;
-        height: 53%;
+        height: 47%;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        /* border: 2px solid red; */
     }
 
 
     .about_inner .paragraphs h1 {
         width: 100%;
         height: 7%;
+        font-size: 1.1em;
         text-align: center;
+        /* border: 2px solid cyan; */
     }
 
 
 
     .about_inner .paragraphs p {
-        height: 50%;
-        font-size: .96em;
-        letter-spacing: .3px;
+        /* border: 2px solid cornflowerblue; */
+        height: 70%;
+        letter-spacing: .2px;
         line-height: 2;
         text-align: justify;
+        word-spacing: -2px;
     }
 
 
@@ -2431,8 +2465,8 @@ footer .footer_inner {
 
 
     #executives {
-        max-height: 330vh;
-        height: 330vh;
+        max-height: 320vh;
+        height: 320vh;
     }
 
 
@@ -2465,11 +2499,11 @@ footer .footer_inner {
         height: 42%;
         justify-content: center;
     }
-
+    
 
     .executives_inner .cards .card .image_content .card_img {
-        width: 58%;
-        height: 92%;
+        width: 56%;
+        height: 91%;
     }
 
 
@@ -2477,7 +2511,8 @@ footer .footer_inner {
     .executives_inner .cards .card .card_content {
         height: 58%;
         justify-content: space-around;
-        margin-top: 1.4em;
+        /* margin-top: 1.4em; */
+        /* border: 2px solid red; */
     }
 
 
@@ -2487,22 +2522,27 @@ footer .footer_inner {
 
 
     .executives_inner .cards .card .card_content .name h3 {
-        font-size: .94em;
-        letter-spacing: .4px;
+        font-size: .91em;
+        letter-spacing: .7px;
     }
 
 
     .executives_inner .cards .card .card_content p {
         height: 50%;
-        line-height: 2.3;
+        line-height: 2.1;
+        font-size: .956em;
         /* border: 2px solid red; */
     }
 
 
 
     .executives_inner .cards .card .card_content p {
-        font-size: 1em;
         padding: 0 .8em 0 .8em;
+    }
+
+
+    .executives_inner .cards .card .card_content .sm_icons ul li a i {
+        font-size: 1.4em;
     }
 
 
@@ -2544,6 +2584,12 @@ footer .footer_inner {
     }
 
 
+    .review_box .review .details .image img {
+        width: 82.5%;
+        padding: .1em;
+    }
+
+
 
     .review_box .review .description p {
         text-align: left;
@@ -2558,7 +2604,7 @@ footer .footer_inner {
 
 
     .parallax_2 {
-        min-height: 65vh;
+        min-height: 60vh;
         height: 10vh;
     }
 
@@ -2612,20 +2658,17 @@ footer .footer_inner {
 
 
     .section_inner .cards a .card .icon {
-        width: 33%;
-    }
-
-
-    .section_inner .cards a .card .icon i {
-        font-size: 2.9em;
+        width: 32.5%;
     }
 
 
 
     .services_inner .cards a .card p {
         height: 35%;
+        font-size: 1em;
         justify-content: center;
-        font-size: 1.1em;
+        padding: .3em .7em 0 .7em;
+        line-height: 2;
     }
 
     
@@ -2636,35 +2679,38 @@ footer .footer_inner {
 
 
     #parallax_3 {
-        max-height: 45vh;
+        max-height: 50vh;
         height: 50vh;
+        align-items: center;
     }
 
 
     #parallax_3 .parallax_3_inner {
-        /* border: 2px solid red; */
         width: 100%;
+        height: 90%;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
     
     
     .parallax_3_inner h1 {
         height: 7%;
     }
-
+    
 
     .parallax_3_inner .content {
         width: 88%;
-        height: 35%;
+        height: 55%;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         text-align: center;
+        margin-top: 1.8em;
     }
 
 
     .parallax_3_inner .content h2 {
+        line-height: 1.6;
         padding: 0 .03em 0 .03em;
     }
 
@@ -2720,7 +2766,6 @@ footer .footer_inner {
 
 
     .footer_main .newsletter form input:nth-child(1) {
-        /* width: 100%; */
         position: relative;
     }
 
@@ -2728,17 +2773,15 @@ footer .footer_inner {
 
     .footer_main .newsletter form i {
         position: absolute;
-        /* right: 1em; */
     }
 
 
     .footer_main .newsletter .checkbox {
-        width: 45%;
+        width: 41%;
         height: 15%;
-        /* border: 2px solid red; */
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
         margin-top: 2.1em;
     }
 
@@ -2747,8 +2790,7 @@ footer .footer_inner {
 
 
     footer .footer_bottom {
-        height: 5%;
-        /* border: 2px solid cornflowerblue; */
+        height: 4.8%;
     }
 
 
