--- a/Css/style.css
+++ b/Css/style.css
@@ -2253,7 +2253,6 @@ footer .footer_inner {
         height: 100%;
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
         align-items: center;
     }
 
@@ -2266,14 +2265,11 @@ footer .footer_inner {
     .hero_inner .hero_left {
         width: 100%;
         height: 90%;
-        /* border: 2px solid red; */
-        /* justify-content: center; */
     }
 
 
     .hero_left .text_and_btn {
         height: 90%;
-        /* border: 2px solid red; */
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -2283,7 +2279,6 @@ footer .footer_inner {
 
     .text_and_btn h2, h1,  p {
         text-align: center;
-        /* border: 2px solid yellow; */
     }
 
     .text_and_btn h2 {
@@ -2298,11 +2293,11 @@ footer .footer_inner {
     .text_and_btn h1 {
         height: 60%;
         /* font-family: sans-serif; */
-        font-family: 'Ubuntu';
-        font-size: 2.2em;
-        font-weight: 900;
+        font-family: 'Roboto';
+        font-size: 2.3em;
+        font-weight: 800;
         letter-spacing: 3px;
-        line-height: 1.6;
+        line-height: 1.7;
         display: flex;
         align-items: center;
         padding: 0 .1em 0 .1em;
@@ -2342,8 +2337,7 @@ footer .footer_inner {
 
 
     #showcase .showcase_inner {
-        /* border: 2px solid cyan; */
-        width: 88%;
+        width: 86%;
         height: 100%;
         justify-content: space-evenly;
     }
